--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   },
   "prettier": {},
   "dependencies": {
-    "frontity": "^1.17.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@frontity/core": "^1.16.0",
-    "@frontity/wp-source": "^1.11.7",
-    "@frontity/tiny-router": "^1.4.4",
     "@frontity/html2react": "^1.7.0",
-    "@frontity/mars-theme": "./packages/mars-theme"
+    "@frontity/mars-theme": "./packages/mars-theme",
+    "@frontity/tiny-router": "^1.4.4",
+    "@frontity/wp-source": "^1.11.7",
+    "@mui/material": "^5.15.1",
+    "frontity": "^1.17.2"
   }
 }
