--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@frontity/wp-source": "^1.11.7",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.1",
     "antd": "^5.12.5",
     "frontity": "^1.17.2"
