--- a/packages/mars-theme/package.json
+++ b/packages/mars-theme/package.json
@@ -6,7 +6,7 @@
     "frontity",
     "frontity-theme"
   ],
-  "homepage": "https://frontity.org",
+  "homepage": "https://frontity.bravastudio.net/",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
